adds Bootstrap dependencies to the layout file; updates the API documentation

--- a/views/help.erb
+++ b/views/help.erb
@@ -1,11 +1,11 @@
 <p>
-  The URL parameters are constructed as /rapper/width/height/color/percent/
+  The URL parameters are constructed as <strong>/:rapper/:width/:height/:color/:percent/</strong>
   <ul>
     <li>the options for rapper are ice_cube, ice_t, and vanilla_ice</li>
     <li>the options for width and height include any valid positive integer below 2560</li>
     <li>the options for color include any valid hex web color without the pound sign in front of it</li>
     <li>the options for percent include any positive integers up to 300</li>
   </ul>
-  An example of a valid URL is /vanilla_ice/1024/768/ffffff/
+  An example of a valid URL is <a href="/vanilla_ice/1024/768/ffc0cb/" title="example link">/vanilla_ice/1024/768/ffc0cb/</a> which returns a 1024 by 768 picture of Vanilla Ice in front of a pink background.
 </p>
-<p>Note: the trailing slash is optional</p> 
+<p>Notes: the trailing slash is optional</p>
