refactor renames the image/ directory to images/ and updates code references

--- a/views/index.erb
+++ b/views/index.erb
@@ -6,7 +6,7 @@
       <h4>Click Your Way to Success</h4>
 
       <p>You can also use this convenient form to set the options and return a picture:</p>
-      <form action="/image" method="post">
+      <form action="/images" method="post">
         <div class="form-group">
           <label for="imageInput">Image</label>
           <select class="form-control" id="imageInput" name="image_input">
